# LiVES

./: .gitignore  AUTHORS  BUGS  ChangeLog  FEATURES  GETTING.STARTED  INSTALL  LiVES.doxygen  Makefile.am  README  autogen.sh  build-lives-rfx-plugin  build-lives-rfx-plugin-multi  conf.mingw  config.h  configure.ac  configure.in  liblives.doxygen  lives-rfx.spec  midistart  midistop  smogrify
libOSC/: Makefile.am  NetworkReturnAddress.c  NetworkReturnAddress.h  NetworkUDP.h  OSC-address-space.c  OSC-address-space.h  OSC-callbacklist.c  OSC-callbacklist.h  OSC-client.h  OSC-common.c  OSC-common.h  OSC-dispatch.h  OSC-drop.c  OSC-drop.h  OSC-internal-messages.h  OSC-pattern-match.c  OSC-pattern-match.h  OSC-priority-queue.c  OSC-priority-queue.h  OSC-receive.c  OSC-receive.h  OSC-string-help.c  OSC-string-help.h  OSC-struct.h  OSC-timetag.c  OSC-timetag.h  libosc.h
libOSC/client/: Makefile.am  OSC-client.c  OSC-timetag.c
libOSC/sendOSC/: Makefile.am  htmsocket.c  htmsocket.h  sendOSC.c
libweed/: Makefile.am  autogen.sh  configure  configure.ac  libweed-compat.pc  libweed-host-utils.pc  libweed-plugin-utils.pc  libweed-plugin.pc  libweed-utils.pc  libweed.doxygen  libweed.pc  libweed_gslice.pc  libweed_slice.pc  test-weed.c  weed-compat.h  weed-effect-plugin.pc  weed-effects.h  weed-events.h  weed-extras.pc  weed-gslice.c  weed-gslice_scripting.c  weed-host-utils.c  weed-host-utils.h  weed-host.h  weed-palettes.h  weed-plugin-utils.c  weed-plugin-utils.h  weed-plugin.h  weed-utils.c  weed-utils.h  weed-utils_scripting.c  weed.c  weed.h
libweed/docs/: weed-utils.txt  weedspec.txt
lives-plugins/icons/: Makefile.am
lives-plugins/marcos-encoders/: Makefile.am  README.multi_encoder  avi_encoder3.py  dirac_encoder.py  dirac_encoder3.py  lives_avi_encoder  lives_avi_encoder3  lives_dirac_encoder  lives_dirac_encoder3  lives_gif_encoder  lives_gif_encoder3  lives_mkv_encoder  lives_mkv_encoder3  lives_mng_encoder  lives_mng_encoder3  lives_mpeg_encoder  lives_mpeg_encoder3  lives_ogm_encoder  lives_ogm_encoder3  lives_theora_encoder  lives_theora_encoder3  mkv_encoder.py  mkv_encoder3.py  mpeg_encoder.py  mpeg_encoder3.py  ogm_encoder.py  ogm_encoder3.py  theora_encoder.py
lives-plugins/weed-plugins/: Makefile.am  RGBdelay.c  alien_overlay.c  alpha_means.c  alpha_to_grey.c  alpha_visualizer.c  audio_fft.c  audio_transition.c  audio_volume.c  beat_detector.c  blank_frame_detector.c  blurzoom.c  bump2d.c  ccorrect.c  colorkey.c  comic.c  data_counter.c  data_processor.c  data_unpacker.c  deinterlace.c  edge.c  farneback_analyser.cpp  fg_bg_removal.c  fireTV.c  fourKlives.c  freenect.c  frei0r.c  haip.c  kaleidoscope.c  ladspa.c  layout_blends.c  libvis.c  lifeTV.c  livetext.c  log_sig.c  mirrors.c  multi_blends.c  multi_transitions.c  negate.c  nn_programmer.c  (+31 more)
src/: Makefile.am  alarms.c  alarms.h  audio.c  audio.h  bindings.hpp  bundles.c  bundles.h  callbacks.c  callbacks.h  ce_thumbs.c  ce_thumbs.h  clip_load_save.c  clip_load_save.h  cliphandler.c  cliphandler.h  colourspace.c  colourspace.h  cvirtual.c  cvirtual.h  defs.h  diagnostics.c  diagnostics.h  dialogs.c  dialogs.h  effects-data.c  effects-data.h  effects-weed.c  effects-weed.h  effects.c  effects.h  events.c  events.h  filesystem.c  filesystem.h  framedraw.c  framedraw.h  frameloader.c  frameloader.h  funcsigs.h  (+115 more)
src/giw/: ChangeLog  README  giwknob.c  giwknob.h  giwled.c  giwled.h  giwtimeline.c  giwtimeline.h  giwvslider.c  giwvslider.h
trunk/: AUTHORS  ChangeLog  FEATURES  GETTING.STARTED  LiVES.appdata.xml  LiVES.doxygen  Makefile.am  NEWS  README  build-lives-rfx-plugin  configure.ac  configure.in  default.keymap  liblives.doxygen  lives.spec  smogrify
trunk/OMC/: LivesController.pd  lives-OMC.txt  lives-clipselect.pd  lives-effect.pd  lives-framrate.pd  lives-simple-status-test.pd  lives_midi.pd
trunk/RFX/: LiVES-Perl.odt  RFX.spec
trunk/debian/: changelog  control
trunk/docs/: clip_format.txt  smogrify.html
trunk/docs/manpages/: smogrify.1  (+4 more)
trunk/libOSC/: Makefile.am  NetworkReturnAddress.c  NetworkUDP.h  OSC-address-space.c  OSC-address-space.h  OSC-callbacklist.c  OSC-callbacklist.h  OSC-common.c  OSC-dispatch.h  OSC-drop.h  OSC-internal-messages.h  OSC-pattern-match.c  OSC-priority-queue.c  OSC-priority-queue.h  OSC-receive.c  OSC-receive.h  OSC-string-help.c  OSC-struct.h  OSC-timetag.c  OSC-timetag.h  README  libosc.h
trunk/libweed/: Makefile.am  libweed-compat.pc  libweed-plugin-utils.pc  libweed-utils.pc  libweed.doxygen  libweed.pc  libweed_slice.pc  weed-compat.h  weed-effects.h  weed-events.h  weed-gslice.c  weed-gslice_scripting.c  weed-host.h  weed-plugin-utils.c  weed-plugin-utils.h  weed-plugin.h  weed-utils.c  weed-utils.h  weed-utils_scripting.c  weed.c  weed.h
trunk/lives-plugins/: projectM.cpp
trunk/m4/: Makefile.am
trunk/menu-entries/: lives.xpm
trunk/po/: POTFILES.in  ar.po  ca.po  cs.po  da.po  de_DE.po  en_GB.po  es.po  et.po  fi.po  fr.po  gl.po  he.po  hr.po  hu.po  it.po  ja.po  lives.pot  make_rfx_builtin_list.pl  nl_NL.po  oc.po  pl.po  pms.po  pt.po  pt_BR.po  ro.po  ru.po  sk.po  te.po  tr.po  ug.po  uk.po  update_with_plugins.sh  update_with_smogrify  update_with_smogrify.sh  uz.po  zh_CN.po
trunk/redhat/: LiVES-0.9.5-1.spec  LiVES.desktop  build-lives
trunk/resources/: Makefile.am
trunk/src/: LiVES.pro  Makefile.am  audio.c  audio.h  bindings.cpp  bindings.hpp  callbacks.c  callbacks.h  ce_thumbs.c  ce_thumbs.h  colourspace.c  colourspace.h  cvirtual.c  cvirtual.h  dialogs.c  effects-data.c  effects-data.h  effects-weed.c  effects-weed.h  effects.c  effects.h  events.c  events.h  framedraw.c  framedraw.h  gui.c  htmsocket.c  htmsocket.h  interface.c  interface.h  jack.c  jack.h  keyboard.c  keyboard.h  lbindings.c  lbindings.h  ldvcallbacks.c  ldvcallbacks.h  ldvgrab.c  ldvgrab.h  (+52 more)
trunk/tools/: autolives.pl  autopp.pl  batchproc.pl  format-code.sh  lives-glc-play  lives-glc-play-norun  lives-play  lives-rte-test.pl  monitorlives.pl  querylives.pl  set_shuffle.pl
trunk/weed-docs/: weed-plugin-utils.txt  weedaudio.txt  weedevents.txt  weedspec.txt
(+1557 files in other folders)
